--- a/app/views/requests/employee_views/_employee_request_actions.html.erb
+++ b/app/views/requests/employee_views/_employee_request_actions.html.erb
@@ -2,12 +2,14 @@
   <% case request.status
      when "in_process" %>
     <%= link_to "Atender", edit_task_path(request: request), class: "form__table-button-view form__table-button--desktop" %>
-    
+
     <%= link_to edit_task_path(request: request), class: "form__table-button-view form__table-button--mobile" do %>
       <i class="bi bi-pencil-square"></i>
     <% end %>
 
-    <%= link_to "Finalizar", class: "form__table-button-toggle form__table-button--desktop" %>
+    <%= link_to "Finalizar", change_status_request_path(request),
+                class: "form__table-button-toggle form__table-button--desktop",
+                data: { turbo_method: :get, turbo_confirm: "Está seguro, esta acción es irreversible" } %>
 
     <%= link_to "#", class: "form__table-button-toggle form__table-button--mobile" do %>
       <i class="bi bi-check-square"></i>
