Vista de atender solicitudes agregada

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -22,10 +22,7 @@
       <% end %>
       <div class="d-flex justify-content-center">
         <div class="btn-group">
-          <%= link_to requests_path, class: "btn btn-primary" do %>
-            <i class="bi bi-arrow-bar-left"></i>
-            Volver
-          <% end %>
+          <%= link_to "Regresar", :back, class: "btn btn-primary" %>
         </div>
       </div>
     <% end %>
