--- a/app/views/tasks/admin_views/_table_col.html.erb
+++ b/app/views/tasks/admin_views/_table_col.html.erb
@@ -1,8 +1,8 @@
 <tr>
-  <td class="text-center"><%= employee.id_card %></td>
-  <td class="text-center"><%= employee.name %></td>
+  <td class="form__table-data"><%= employee.id_card %></td>
+  <td class="form__table-data"><%= employee.name %></td>
   <% if list_type == "remove" %>
-    <td class="text-center">
+    <td class="form__table-data">
       <% if employee.tasks.where(:request_id => @request.id).first.status != "pending" %>
         Sí
       <% else %>
@@ -11,7 +11,7 @@
     </td>
   <% end %>
   <% if @request.status != "completed" && @request.status != "closed" %>
-    <td class="text-center">
+    <td class="form__table-data">
       <%= check_box_tag "selected_employees_to_#{list_type}[]", employee.id %>
     </td>
   <% end %>
