--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,14 +1,21 @@
-<div class="container">
-  <h1>Asignar trabajadores:</h1>
-  <h4>Solicitud <%= @request.id %></h4>
-  <div id="add-employees">
-    <%= render "/tasks/admin_views/employee_list", task: @task, request: @request, list_type: "add" %>
+<main class="main">
+  <div class="container form">
+    <h1 class="form__heading">Atender solicitud</h1>
+    <hr class="mb-3">
+
+    <h3 class="form__subheading--mandala my-5">
+      Solicitud
+      <%= link_to @request, class: "fw-normal" do %>
+        <%= @request.identifier %>&nbsp;<i class="bi bi-info-circle fw-bold" style="font-size: 1.8rem"></i>
+      <% end %>
+    </h3>
+
+    <div id="add-employees">
+      <%= render "/tasks/admin_views/employee_list", task: @task, request: @request, list_type: "add" %>
+    </div>
   </div>
+</main>
 
-  <br>
-
-  <div>
-    <%= link_to "Volver a las solicitudes", requests_path %>
-  </div>
-</div>
-
+<script>
+  document.getElementById("d-none").style.display = "block";
+</script>
