Aplicando uniformidad a los titulos y botones de las vistas de empleados

--- a/app/views/tasks/admin_views/_employee_list.html.erb
+++ b/app/views/tasks/admin_views/_employee_list.html.erb
@@ -28,10 +28,10 @@
       <%= button_tag(class: "form__button-submit") do %>
         <% if list_type == "add" %>
           <i class="bi bi-person-plus"></i>&nbsp;
-          Asignar empleados
+          Asignar trabajadores
         <% else %>
           <i class="bi bi-person-dash"></i>&nbsp;
-          Remover empleados
+          Remover trabajadores
         <% end %>
       <% end %>
 
