--- a/app/views/user_accounts/registrations/new.html.erb
+++ b/app/views/user_accounts/registrations/new.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="container form form--mandala">
-    <h1 class="form__heading--mandala">Nuevo <%= resource.role == "worker" ? "empleado" : "administrador" %></h1>
+    <h1 class="form__heading--mandala">Nuevo <%= resource.role == "worker" ? "trabajador" : "administrador" %></h1>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <div class="form__input--mandala">
@@ -23,12 +23,12 @@
       </div>
 
       <div class="form__input--mandala d-none">
-        <%= f.label "Tipo de empleado", class: "form__input-label" %>
+        <%= f.label "Tipo de trabajador", class: "form__input-label" %>
         <%= f.text_field :role, readonly: true, class: "form__input-textfield" %>
       </div>
 
       <div class="form__input--mandala">
-        <%= f.label resource.role == "worker" ? "Estado del empleado" : "estado del administrador", class: "form__input-label" %>
+        <%= f.label resource.role == "worker" ? "Estado del trabajador" : "estado del administrador", class: "form__input-label" %>
         <div class="form__check-group">
           <% if resource.status == "Activo" %>
             <div class="form__input-radio">
@@ -55,7 +55,7 @@
       </div>
 
       <div class="button-group">
-        <%= f.submit resource.role == "worker" ? "Agregar empleado" : "Agregar administrador", class: "form__button-submit", id: "add-button" %>
+        <%= f.submit resource.role == "worker" ? "Agregar trabajador" : "Agregar administrador", class: "form__button-submit", id: "add-button" %>
         <%= link_to "Regresar", root_path, class: "form__button-back" %>
       </div>
     <% end %>
