Migrando estilos de vistas (request feedback) a SASS

--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -1,55 +1,52 @@
 <%= form_with(model: feedback) do |form| %>
-  <% if feedback.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(feedback.errors.count, "error") %> prohibited this feedback from being saved:</h2>
-      <ul>
-        <% feedback.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="container mt-3 pt-5 pb-5 ps-5 pe-5 border border-2 rounded-3">
-    <div class="mb-3">
-      <%= form.label "Comentarios y observaciones", style: "display: block" %>
-      <%= form.text_area :observations, class: "form-control" %>
-    </div>
-    <div class="d-none">
-      <%= form.label :request_id, style: "display: block" %>
-      <%= form.hidden_field :request_id, value: @request.id, class: "form-control" %>
-    </div>
-    <div class="containter">
-      <%= form.label "Nivel de satisfacción", style: "display: block" %>
-      <div class="row mt-1">
-        <div class="col">
-          <%= form.radio_button :satisfaction, 1, :name => "satisfaction" %>
-          <label>1</label>
-          <span>Muy negativa</span>
-        </div>
-        <div class="col">
-          <%= form.radio_button :satisfaction, 2, :name => "satisfaction" %>
-          <label>2</label>
-          <span>Negativa</span>
-        </div>
-        <div class="col">
-          <%= form.radio_button :satisfaction, 3, :name => "satisfaction" %>
-          <label>3</label>
-          <span>Neutral</span>
-        </div>
-        <div class="col">
-          <%= form.radio_button :satisfaction, 4, :name => "satisfaction" %>
-          <label>4</label>
-          <span>Positiva</span>
-        </div>
-        <div class="col">
-          <%= form.radio_button :satisfaction, 5, :name => "satisfaction" %>
-          <label>5</label>
-          <span>Muy positiva</span>
-        </div>
+  <div class="form__input--mandala">
+    <label for="request_id" class="form__input-label">Código de solicitud</label>
+    <input type="text" id="request_id" class="form__input-textfield" value="<%= @request.identifier %>" disabled>
+  </div>
+
+  <div class="d-none">
+    <%= form.label :request_id %>
+    <%= form.hidden_field :request_id, value: @request.id %>
+  </div>
+
+  <div class="form__input--mandala">
+    <%= form.label "Comentarios u observaciones", class: "form__input-label" %>
+    <%= form.text_area :observations, placeholder: "Agregar comentario", class: "form__input-textarea", rows: "5" %>
+  </div>
+
+  <div class="form__input">
+    <%= form.label "Nivel de satisfacción", class: "form__input-label" %>
+
+    <div class="form__check-group mt-4">
+      <div class="form__input-radio">
+        <%= form.label "Muy positiva", class: "form__input-label fs-normal" %>
+        <%= form.radio_button :satisfaction, 5, :name => "satisfaction" %>
       </div>
-      <div class="d-flex justify-content-center mt-5">
-        <%= form.submit "Devolver feedback", class: "btn btn-sm btn-primary" %>
+
+      <div class="form__input-radio">
+        <%= form.label "Positiva", class: "form__input-label fs-normal" %>
+        <%= form.radio_button :satisfaction, 4, :name => "satisfaction" %>
+      </div>
+
+      <div class="form__input-radio">
+        <%= form.label "Neutral", class: "form__input-label fs-normal" %>
+        <%= form.radio_button :satisfaction, 3, :name => "satisfaction" %>
+      </div>
+
+      <div class="form__input-radio">
+        <%= form.label "Negativa", class: "form__input-label fs-normal" %>
+        <%= form.radio_button :satisfaction, 2, :name => "satisfaction" %>
+      </div>
+
+      <div class="form__input-radio">
+        <%= form.label "Muy negativa", class: "form__input-label fs-normal" %>
+        <%= form.radio_button :satisfaction, 1, :name => "satisfaction" %>
       </div>
     </div>
+  </div>
+
+  <div class="button-group mt-5">
+    <%= form.submit "Enviar retroalimentación", class: "form__button-submit", id: "add-button" %>
+    <%= link_to "Regresar", :back, class: "form__button-back" %>
   </div>
 <% end %>
