--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,5 +1,9 @@
-<div class="container">
-  <%= render "form", feedback: @feedback, request: @request %>
-</div>
+<main class="main">
+  <div class="container form form--mandala">
+    <h1 class="form__heading--mandala">Retroalimentación</h1>
+
+    <%= render "form", feedback: @feedback, request: @request %>
+  </div>
+</main>
 
 
