Corrigiendo detalles de los botones en las tablas

--- a/app/views/requests/admin_views/_admin_request_actions.html.erb
+++ b/app/views/requests/admin_views/_admin_request_actions.html.erb
@@ -1,10 +1,10 @@
 <% case request.status
    when "pending" %>
-      <%= link_to change_status_request_path(request), class: "form__table-button-view form__table-button--desktop" do %>
+      <%= link_to change_status_request_path(request), class: "form__table-button-toggle form__table-button--desktop" do %>
         <i class="bi bi-pencil-square"></i>&nbsp;Atender
       <% end %>
 
-      <%= link_to change_status_request_path(request), class: "form__table-button-view form__table-button--mobile" do %>
+      <%= link_to change_status_request_path(request), class: "form__table-button-toggle form__table-button--mobile" do %>
         <i class="bi bi-pencil-square"></i>
       <% end %>
 
@@ -17,11 +17,11 @@
       <% end %>
 
 <% when "in_process" %>
-  <%= link_to edit_task_path(:request => request.id), class: "form__table-button-view form__table-button--desktop" do %>
-    <i class="bi bi-pencil-square"></i>&nbsp;&nbsp;Editar asignaciones
+  <%= link_to edit_task_path(:request => request.id), class: "form__table-button-toggle form__table-button--desktop" do %>
+    <i class="bi bi-pencil-square"></i>&nbsp;&nbsp;Seguimiento/Editar
   <% end %>
     
-  <%= link_to edit_task_path(:request => request.id), class: "form__table-button-view form__table-button--mobile" do %>
+  <%= link_to edit_task_path(:request => request.id), class: "form__table-button-toggle form__table-button--mobile" do %>
     <i class="bi bi-pencil-square"></i>
   <% end %>
 <% when "completed" %>
@@ -32,13 +32,4 @@
   <%= link_to edit_task_path(:request => request.id), class: "form__table-button-close form__table-button--mobile", data: { confirm: "¿Está seguro(a)? Esta acción es irreversible" } do %>
     <i class="bi bi-x-square"></i>
   <% end %>
-
-<% when "closed" %>
-<%= link_to request, class: "form__table-button-view form__table-button--desktop" do %>
-  <i class="bi bi-eye"></i>&nbsp;Ver
-<% end %>
-
-<%= link_to request, class: "form__table-button-view form__table-button--mobile" do %>
-  <i class="bi bi-eye"></i>
-<% end %>
 <% end %>
